Changed about image and hero image for better view and made it parallax. Also changed font color and sizes for better readability. Added hamburger menu for mobile view and also fixed some layout issues on mobile. Made the header nav links space out better and responds to different sizes.

--- a/style.css
+++ b/style.css
@@ -22,20 +22,20 @@ body{
     text-align: left;
 }
 .hero-container {
+    background-image: url('photos/dark.jpg');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+
     position: relative;
     width: 100%;
     height: 850px;
     overflow: hidden;
     background-color: black;
 }
-.hero-image {
-    filter: contrast(1.1) brightness (1.05);
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-    z-index: 1;
-}
+
 .hero-container::after {
     content: "";
     position: absolute;
@@ -58,17 +58,13 @@ body{
     text-align: center;
     width: 100%;
     z-index: 3;
-    text-shadow: 
-                -0.5px -0.5px 0 #fff,
-                0.5px -0.5px 0 #fff,
-                -0.5px 0.5px 0 #fff,
-                0.5px 0.5px 0 #fff;
+    text-shadow: -0.5px -0.5px 0 #b9b9b9;
 }
 .hero-text h1 {
 
     letter-spacing: 3px;
     font-size: 80px;    
-    color: rgb(255, 67, 67);
+    color: rgb(126, 0, 0);
 }
 .hero-text h2 {
     margin-top: -50px;
@@ -86,6 +82,17 @@ body{
 
 }
 .about-section {
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('photos/about2.JPG');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
     padding: 170px 200px;
@@ -93,46 +100,28 @@ body{
     color: #000000;
 }
 
-.image-container {
-    width: 1500px;
-    padding: 20px;
-    border-radius: 30px;
-    border-radius: 10% 10% 10% 10%;
-    order: 1;
-    margin-left: 100px;
-    justify-content: center;
-    align-items: center;
-}
-.image-container img {
-    align-items: center;
-    justify-content: center;
-    float: center;
-    border-radius: 10% 10% 10% 10%;
-    width: 100%;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-    margin: 10px 0;
-    height: auto;
-    display: block;
-}
-
 .about-text h2 {
     width: 400px;
     order: 2;
     flex: 1 1 50%;
-    color: rgb(27, 27, 27);
-    font-size: 80px;
+    color: rgb(255, 252, 241);
+    font-size: 90px;
     margin-bottom: 20px;
-    text-align: left;
+    text-align: center;
+    text-shadow: -0.5px -0.5px 0 #000000;
+
 }
 
 .about-text p {
     font-family: 'Montserrat', sans-serif;
-    letter-spacing: -0.5px;
-    font-size: 20px;
-    text-align: left;    
-    line-height: 25px;
+    font-size: 28px;
+    text-align: center;    
+    line-height: 30px;
     max-width: 100%;
     margin: 0 auto;
+    color: rgb(255, 252, 241);
+    text-shadow: -0.5px -0.5px 0 #191919;
+
 }
 .menu-section {
     background-color: #002301;
@@ -345,7 +334,7 @@ body{
     text-align: center;
     flex: 1;
     letter-spacing: 2px;
-}
+} 
 .location-text h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -525,6 +514,12 @@ p {
     gap: 40px;
     padding: 0px 50px;
 }
+.menu-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
 .right-nav {
     display: flex;
     align-items: center;
@@ -599,6 +594,114 @@ p {
 }
 
 @media screen and (max-width: 768px) {
+    .nav-container {
+        display: flex;
+        position: relative;
+        justify-content: flex-end;
+        padding: 10px;
+        z-index: 1001;
+    }
+
+    .menu-wrapper {
+        display: flex;
+        flex-direction: column;
+        background-color: #1a1a1a;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: 75%;
+        height: 100vh;
+        text-align: center;
+        justify-content: center;
+        align-items: flex-end;
+        padding-right: 40px;
+        z-index: 1000;
+        transition: right 0.4s ease-in-out;
+
+    }
+    .menu-wrapper.active {
+        right: 0;
+    }
+    .menu-wrapper.active::before {
+        content: "";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: rgba(0,0,0,0.5);
+        z-index: -1;
+    }
+
+    .nav-links, .nav-links.right {
+        background: none;
+        display: block;
+        flex-direction: column;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        text-align: right;
+        align-items: flex-end;
+    }
+    .nav-links li {
+        list-style: none;
+        margin: 0;
+        padding: 5px 0;
+        text-align: right;
+    }
+    .nav-links a {
+        display: inline-block;
+        padding: 12px 20px;
+        border: 1px solid white;
+        border-radius: 5px;
+        color: white;
+        text-decoration: none;
+        width: auto;
+        min-width: 120px;
+        transition: 0.3s;
+    }
+    .nav-links li a:active {
+        background-color: white;
+        color: #1a1a1a;
+    }
+    .nav-links.active, .nav-links.right.active {
+        display: flex;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+        padding: 10px;
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 1001;
+    }
+    
+    .bar {
+        display: block;
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        background-color: white;
+    }
+    
+
+    #about::before {
+        background-attachment: scroll !important
+    }
+    #about {
+        padding: 60px 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #about h1 {
+        font-size: 40px;
+        line-height: 1.2;
+    }
+
     .about-section, .menu-section, .location-section, .hours-section {
         padding: 150px 30px;
     }
@@ -611,15 +714,6 @@ p {
     .about-text p {
         font-size: 16px;
         line-height: 20px;
-    }
-    .about-image {
-        align-items: center;
-        justify-content: center;
-        float: center;
-        display: block;
-        width: 100%;
-        margin: 10px 0;
-        max-width: none;
     }
     .image-container {
         
